--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@unly/universal-language-detector": "^2.0.3",
+    "accept-language": "^3.0.18",
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "i18next": "^23.5.1",
-    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-resources-to-backend": "^1.1.4",
     "next": "13.4.19",
+    "next-i18next": "^14.0.3",
+    "next-translate": "^2.6.0",
     "nodemon": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
