--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -17,6 +22,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "font-awesome": "^4.7.0",
     "i18next": "^23.5.1",
     "i18next-resources-to-backend": "^1.1.4",
     "next": "13.4.19",
@@ -24,8 +30,10 @@
     "next-translate": "^2.6.0",
     "nodemon": "^3.0.1",
     "react": "18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.2",
+    "react-player": "^2.13.0",
     "typescript": "5.1.6"
   }
 }
