--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -80,12 +80,11 @@ jobs:
 - name: Static HTML export with Next.js
   run: ${{ steps.detect-package-manager.outputs.runner }} next export
   env:
-    NEXT_PUBLIC_BASE_PATH: '/web-fondo-territorial-mesoamericano' # Replace 'your-repository-name' with your repository name
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: ./out
+    NEXT_PUBLIC_BASE_PATH: '/web-fondo-territorial-mesoamericano'
+- name: Upload artifact
+  uses: actions/upload-pages-artifact@v2
+  with:
+    path: ./out
 
   # Deployment job
   deploy:
