--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/react-dom": "18.2.7",
     "@unly/universal-language-detector": "^2.0.3",
     "accept-language": "^3.0.18",
-      "axios": "^1.6.2",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "14.0.3",
@@ -32,11 +32,15 @@
     "next": "14.0.3",
     "next-i18next": "^14.0.3",
     "next-translate": "^2.6.0",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "react": "18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.14"
   }
 }
